CPG-DEV/src/objects/BusinessDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccountGroup__c</fullName>
        <description>Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Account Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSegmentation__c</fullName>
        <description>The Customer Segmentation field has following picklist values
==&gt;CCC
Partner
Premium
Business as usual
==&gt;GEOS
Strategic
Premium
Plus
Excellence

Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Account Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business as usual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Details</relationshipLabel>
        <relationshipName>Business_Unit_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BusinessAlias__c</fullName>
        <formula>CASE( BusinessUnit__r.Name , 
&quot;Go To Market Corporate Accounts&quot;,&quot;GTM Corp Accts&quot;, 
&quot;Go To Market Shared Sales North America&quot;,&quot;GTM SS NA&quot;, 
&quot;Go To Market Shared Sales EMEA&quot;,&quot;GTM SS EMEA&quot;, 
&quot;Global Edible Oil Solutions North America&quot;,&quot;GEOS NA&quot;, 
&quot;Global Edible Oil Solutions Europe&quot;,&quot;GEOS Europe&quot;, 
&quot;Cargill Industrial Specialties&quot;,&quot;CIS&quot;, 
&quot;Global Edible Oil Solutions Mexico&quot;,&quot;GEOS Mexico&quot;, 
&quot;Global Edible Oil Solutions South America&quot;,&quot;GEOS SA&quot;, 
&quot;Global Edible Oil Solutions Venezuela&quot;,&quot;GEOS Venezuela&quot;, 
&quot;Edible Oil Solutions India&quot;,&quot;GEOS India&quot;, 
&quot;Global Edible Oil Solutions Asia Pacific&quot;,&quot;GEOS AP&quot;, 
&quot;Foods Brazil&quot;,&quot;Foods Brazil&quot;, 
&quot;Starches &amp; Sweeteners North America&quot;,&quot;SSNA&quot;, 
&quot;Starches &amp; Sweeteners Europe&quot;,&quot;SSE&quot;, 
&quot;Cargill Texturizing Solutions&quot;,&quot;CTS&quot;, 
&quot;Starches &amp; Sweeteners South America&quot;,&quot;SSSA&quot;, 
&quot;Foods Middle East, Turkey, and North Africa&quot;,&quot;CF METNA&quot;, 
&quot;Cargill Cocoa &amp; Chocolate&quot;,&quot;CCC&quot;, 
&quot;Cocoa &amp; Chocolate North America&quot;,&quot;CCCNA&quot;, 
&quot;Cocoa &amp; Chocolate Brazil&quot;,&quot;CCC Brazil&quot;, 
&quot;Refined Oils Asia Pacific&quot;,&quot;ROAP&quot;, 
&quot;Starches &amp; Sweeteners China&quot;,&quot;S&amp;S China&quot;, 
&quot;Starches &amp; Sweeteners Southeast Asia&quot;,&quot;S&amp;S SE Asia&quot;, 
&quot;Toshoku&quot;,&quot;Toshoku&quot;, 
&quot;Foods India&quot;,&quot;Foods India&quot;, 
&quot;Cargill Deicing Technology&quot;,&quot;GTM Corp Accts&quot;,
&quot;Food Argentina&quot;,&quot;GTM Corp Accts&quot;,
&quot;Malt&quot;,&quot;Malt&quot;, 
&quot;Commercial Excellence NA&quot;,&quot;CE NA&quot;,
&quot;Commerical Excellence NA - Shared Sales&quot;,&quot;CE NA SS&quot;,
&quot;Global Edible Oil Solutions India&quot;,&quot;GEOS India&quot;,
&quot;Haribo CTS&quot;,&quot;GTM Corp Accts&quot;,
&quot;Commercial Excellence EMEA&quot;,&quot;CE EMEA&quot;,
&quot;Commercial Excellence - Inside Sales&quot;,&quot;CE EMEA IS&quot;,
&quot;&quot;)</formula>
        <label>Business Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Business Details</relationshipLabel>
        <relationshipName>Business_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity2__c</fullName>
        <description>Created by EB  for GEOS Sprint1</description>
        <label>Capacity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity3__c</fullName>
        <description>Created by EB  for GEOS  Sprint1</description>
        <label>Capacity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Created by EB  for GEOS Sprint1</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMarketStrategy__c</fullName>
        <description>Created by EB  for GEOS on 4/18/2017 Sprint1</description>
        <label>Current Market Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CustomerSetupApprovalDate__c</fullName>
        <description>Created by Heena on 4/11/2017 for CCC and GEOS Sprint1</description>
        <label>Customer Setup Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FuturePlan__c</fullName>
        <description>Created by EB  for GEOS on 4/18/2017 Sprint1</description>
        <label>Future Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InactiveReasons__c</fullName>
        <description>This Picklist Include Following Fields,
Credit Issues
No Longer In Business
Customer Using Another Supplier
Other
Backlisted

Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Inactive Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer In Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Using Another Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlisted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KeyStrengths__c</fullName>
        <description>Created by EB  for GEOS on 4/18/2017 Sprint1</description>
        <label>Key Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LastProspectStatusChange__c</fullName>
        <description>Created by Heena on 4/13/2017 for CCC and GEOS Sprint1</description>
        <label>Last Prospect status change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location2__c</fullName>
        <description>Created by EB on 4/14/2017 for GEOS Sprint1</description>
        <label>Location 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location3__c</fullName>
        <description>Created by EB on 4/14/2017 for GEOS Sprint1</description>
        <label>Location 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Created by EB on 4/14/2017 for GEOS Sprint1</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketShareinProductGroup1__c</fullName>
        <description>Created for GEOS on 4/18/2017 Sprint1</description>
        <label>Market share in product group 1, %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketshareinproductgroup2__c</fullName>
        <description>Created for GEOS on 4/18/2017 Sprint1</description>
        <label>Market share in product group 2, %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryBusinessContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Business Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BusinessUnitDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup1__c</fullName>
        <description>Created by EB  for GEOS Sprint1</description>
        <label>Product Group 1</label>
        <picklist>
            <picklistValues>
                <fullName>Sunflower Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Tropical Oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-Added Functional Fats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HORECA oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottled Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syrups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Starch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Starch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corn gluten Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vital wheat gluten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other PFLs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrocolloids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>polyols</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductGroup2__c</fullName>
        <description>Created for GEOS on 4/18/2017 Sprint1</description>
        <label>Product Group 2</label>
        <picklist>
            <picklistValues>
                <fullName>Sunflower oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity tropical oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-Added Functional fats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HORECA oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottled oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syrups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native starch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified starch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corn gluten meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vital wheat gluten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other PFLs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrocolloids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyols</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>Created by Heena on 4/11/2017 for GEOS Sprint1
Replaced for BUProductLine__c. Moved from Account to Business details</description>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Go To Market Corporate Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go To Market Shared Sales North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go To Market Shared Shares EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions Venezuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Edible Oil Solutions India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Industrial Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starches &amp; Sweeteners North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starches &amp; Sweeteners Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starches &amp; Sweeteners South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Texturizing Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods Middle East, Turkey, and North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Cocoa &amp; Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa &amp; Chocolate North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa &amp; Chocolate Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refined Oils Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starches &amp; Sweeteners China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starches &amp; Sweeteners Southeast Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshoku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malt</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductLineInterest__c</fullName>
        <description>This Product Line Interest Field contains the following picklist values,
==&gt;CCC
Chocolate
Coatings &amp; Fillings
Cocoa Butter
Cocoa Liquor
Cocoa Powder
==&gt;GEOS
Blends
Hosun
Hydro
Ines
Laurics
other
Palm
Palm Fractions
Rape
Soy
Specialities
Sun

Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Product Line Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Chocolate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coatings &amp; Fillings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palm Fractions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatesToCompetitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by EB for CCC on 4/18/2017 Sprint1</description>
        <label>Relates to Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Details (Relates to Competitor)</relationshipLabel>
        <relationshipName>Business_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesSupport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user in SFDC.

Created by EB on 4/10/2017 for GEOS Sprint1

Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Sales Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesTeamRegion__c</fullName>
        <description>This Sales team region picklist field has following values,
BE / FR
Bio-Energy
Danone
ES Team
FS France
Feed
FS Iberia
NL Team
Pepsico
PLM
RFS Germany &amp; East EU
RFS Key Account
RFs West EU
Team 21
Technical Applications
Uk / Ireland
Unilever

Created by EB on 4/10/2017 for GEOS Sprint1</description>
        <label>Sales Team Region</label>
        <picklist>
            <picklistValues>
                <fullName>BE / FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS Iberia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pepsico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFS Germany &amp; East EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFS Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFs West EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uk / Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TargetedMarketCategories__c</fullName>
        <description>Created for GEOS on 4/18/2017 Sprint1</description>
        <label>Targeted Market Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Chocolate confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frozen desserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margarine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayonnaise and sauces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience/Instant Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jams, fruit preps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer, other alcoholic beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbonated soft drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice, drinks, nectars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed meat products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HoReCa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor / co-packer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petfood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal care and cosmetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrugated board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical oils and lubricants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-chemical industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other non-food</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This Type picklist field consists of following picklist values,
==&gt;CCC
Agent
Direct Customer
Distributor
Gourmet Distributor
Indirect Customer via Agent
Inside Sales
Intercompany
==&gt;GEOS
Agent
Broker
Buyer
Direct Customer
Distributor
Receiver

Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gourmet Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Customer via Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiver</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WeakSpots__c</fullName>
        <description>Created by EB  for GEOS on 4/18/2017 Sprint1</description>
        <label>Weak Spots</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>isDistributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account serves as a Distributor for the associated Business.</description>
        <inlineHelpText>Account serves as a Distributor for the associated Business.</inlineHelpText>
        <label>Distributor</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>BusinessAlias__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>